--- a/index.html
+++ b/index.html
@@ -1,57 +1,136 @@
 <!DOCTYPE html>
 <html ng-app="ngSpApp">
+
 <head>
-  <title>Single Page App Template</title>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <title>Single Page App Template</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <style>
+        .btn1.sharp {
+            border-radius: 0;
+        }
+    </style>
 </head>
+
 <body>
-  <div class="container">
-		<table style="width:100%;margin:10px">
-			<tr>
-				<td style="width: 15%;vertical-align: top;">
-					<div class="list-group" style="margin-top:20px" >
-						<a href="#/" class="list-group-item active">Home</a>
-						<a href="#/link1" class="list-group-item">Link 1</a>
-					</div>
-				</td>
-				<td style="vertical-align: top;padding-left:10px;">
-					<div ng-view></div>
-				</td>
-			</tr>
-		</table>
-	</div>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script>
-    //
-    // Defining Module
-    //
-    var spApp = angular.module( "ngSpApp", ['ngRoute'] );
-    //
-    // Defining Routes
-    //
-    spApp.config(function($routeProvider) {
-    	$routeProvider.when('/link1', {
-    		controller : 'Link1Ctrl',
-    		templateUrl : 'views/link1.html'
-    	}).otherwise({
-    		controller : 'HomeCtrl',
-    		templateUrl: 'views/home.html'
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <table style="width:100%;margin:10px">
+                    <tr>
+                        <td style="width: 15%;vertical-align: top;">
+                            <div class="list-group" style="margin-top:20px">
+                                <a href="#/" class="list-group-item active">Home</a>
+                                <a href="#/link1" class="list-group-item">Link 1</a>
+                            </div>
+                        </td>
+                        <td style="vertical-align: top;padding-left:10px;">
+                            <div ng-view></div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <button type="button" class="btn sharp btn-lg btn-default">Default</button>
+            </div>
+            <br>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            </div>
+            <br>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <span class="input-group-addon">
+                        <input type="checkbox" aria-label="..."></input>
+                    </span>
+                    <input type="text" class="form-control" aria-label="..."></input>
+                </div>
+                <br />
+            </div>
+            <div class="col-lg-6">
+                <div class="input-group">
+                    <span class="input-group-addon">
+                      <input type="radio" name="optionsRadios" aria-label="123">1</input>
+                      <input type="radio" name="optionsRadios" aria-label="123">2</input>
+                    </span>
+                    <input type="text" class="form-control" aria-label="..." />
+                </div>
+            </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+             <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios1"
+                   value="option1" checked> 选项 1
+             </label>
+          </div>
+          <div class="radio">
+             <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios2"
+                   value="option2">
+                   选项 2 - 选择它将会取消选择选项 1
+             </label>
+        </div>
+    </div>
+    <div style="padding: 100px 100px 10px;">
+        <form class="bs-example bs-example-form" role="form">
+            <div class="input-group">
+                <span class="input-group-addon">@</span>
+                <input type="text" class="form-control" placeholder="twitterhandle">
+            </div>
+            <br>
+            <div class="input-group">
+                <input type="text" class="form-control">
+                <span class="input-group-addon">.00</span>
+            </div>
+            <br>
+            <div class="input-group">
+                <span class="input-group-addon">$</span>
+                <input type="text" class="form-control">
+                <span class="input-group-addon">.00</span>
+            </div>
+        </form>
+    </div>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script>
+        //
+        // Defining Module
+        //
+        var spApp = angular.module("ngSpApp", ['ngRoute']);
+        //
+        // Defining Routes
+        //
+        spApp.config(function($routeProvider) {
+            $routeProvider.when('/link1', {
+                controller: 'Link1Ctrl',
+                templateUrl: 'views/link1.html'
+            }).otherwise({
+                controller: 'HomeCtrl',
+                templateUrl: 'views/home.html'
+            });
         });
-    });
-    //
-    // Controller for Home Page
-    //
-    spApp.controller( "HomeCtrl", [ '$scope', function($scope) {
-      $scope.text = 'Hello, this is homepage';
-    }]);
-    
-    //
-    // Controller for Link1 Page
-    //
-    spApp.controller( "Link1Ctrl", [ '$scope', function($scope) {
-      $scope.text = 'Hello, this is link1 page';
-    }]);
-  </script>
+        //
+        // Controller for Home Page
+        //
+        spApp.controller("HomeCtrl", ['$scope', function($scope) {
+            $scope.text = 'Hello, this is homepage';
+        }]);
+
+        //
+        // Controller for Link1 Page
+        //
+        spApp.controller("Link1Ctrl", ['$scope', function($scope) {
+            $scope.text = 'Hello, this is link1 page';
+        }]);
+    </script>
 </body>
+
 </html>
